--- a/indexstyle.css
+++ b/indexstyle.css
@@ -14,7 +14,7 @@ html, body{
 #projects {
      width: 100%;
     height: 70%;
-    background-color: #0F9FB4;
+    background-color: #00c6e0;
 }
 
 #profile_image{
@@ -32,8 +32,9 @@ img{
 }
 
 #my_name{
-    color:#C9E1C1;
+    color:#c9e1c1;
     position: absolute;
+    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
     left: 280px;
-    top: 140px;
+    top: 150px;
 }
