--- a/indexstyle.css
+++ b/indexstyle.css
@@ -14,7 +14,7 @@ html, body{
 #projects {
      width: 100%;
     height: 70%;
-    background-color: #00c6e0;
+    background-color: #0f95b4;
 }
 
 #profile_image{
