--- a/indexstyle.css
+++ b/indexstyle.css
@@ -8,32 +8,25 @@ html, body{
 #heading {
     width: 100%;
     height: 30%;
-    background-color: #152737;
+    background-color: #1D2f3e;
 }
 
 #projects {
      width: 100%;
     height: 70%;
-    background-color: #0f95b4;
-}
-
-#profile_image{
-    position: absolute;
-    left: 50px;
-    top: 70px;
+    background-color: #1aa1c1;
 }
 
 img{
-    max-height: 60%;
-    max-width: 60%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    max-height: 30%;
+    max-width: 30%;
+    position: absolute;
+    top:100px;
+    left: 50px;
 }
 
 #my_name{
     color:#c9e1c1;
-    position: absolute;
     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
     left: 280px;
     top: 150px;
