--- a/indexstyle.css
+++ b/indexstyle.css
@@ -39,10 +39,15 @@ img{
     top: 150px;
 }
 
+.menu_item_div{
+     display: inline-block;
+    background: #bbd9f7;
+}
+
 .menu_items {
     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
     min-height: 30px;
-    display: inline-block;
+   
     margin: 0 auto;
     padding-top: 8px;
     padding-bottom: 0px;
