--- a/style.css
+++ b/style.css
@@ -63,11 +63,13 @@ html,body{
 
 
 p{
+     margin: 0px;
     padding: 0px;
     color: #ffd452;
 }
 
 h1 {
+    margin: 0px;
     padding: 0px;
     color: #e05151;
 }
@@ -80,6 +82,8 @@ h1 {
 
 #divheaddetails{
     width: 60%;
+     position: relative;
+    top:60px;
     height: 100%;
     float: right;
 }
@@ -88,6 +92,9 @@ h1 {
     max-width: 100%;
     max-height:100%;
     display: block;
+   border: 5px solid #d9411e;
+    position: relative;
+    top:60px;
     margin-left: auto;
     margin-right: 20px;
 }
